samples/_failures_safe/1761729624_09da45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ce449ac.c: In function ‘main’:
./samples/SAFE/__tmp_2ce449ac.c:116:5: error: expected expression at end of input
  116 |     if (
      |     ^~
./samples/SAFE/__tmp_2ce449ac.c:116:5: error: expected declaration or statement at end of input
